apps/helpdesk/src/pages/automate/workflows/analytics/WorkflowAnalytics.less
@import '~css/typography';
@import '~@gorgias/design-tokens/dist/css/typographyTokens';

:local {
    .page {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
    }

    .pageHeader {
        gap: var(--layout-spacing-m);
        min-height: auto;
        align-items: flex-start;
        padding: 16px 24px;
    }

    .pageContainer {
        width: 100%;
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        margin: 0;
        padding: 0;
        position: relative;
    }

    .workflowToggle {
        position: absolute;
        z-index: 4;
        right: var(--layout-spacing-s);
        top: var(--layout-spacing-s);
    }

    .workflowBanner {
        position: absolute;
        z-index: 4;
        top: var(--layout-spacing-s);
        right: 0;
        left: 0;
        margin: auto;
        justify-self: center;
        max-width: 50%;
    }

    .filterHeader {
        display: flex;
        flex-direction: column;
        align-items: end;
        gap: 12px;
    }

    .headerLeft {
        display: flex;
        flex-direction: column;
        flex-grow: 1;
        max-width: 500px;

        .headerLeftInput {
            input {
                font-size: @heading-section-regular-font-size;
            }

            height: 40px;
        }

        .headerLeftdescription {
            color: var(--neutral-grey-5);
            margin-top: var(--layout-spacing-xs);
            line-height: normal;
        }
    }

    .headerInner {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: var(--layout-spacing-xs);
    }

    .headerRight {
        display: flex;
        flex-wrap: wrap;
        gap: var(--layout-spacing-xs);
    }

    .lastSaved {
        .body-regular();
        margin-top: var(--layout-spacing-xs);
        display: flex;
        justify-content: flex-end;
    }
}

